2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* addr2line.c (handle_address): Add fallthrough comment.
	* elfcompress.c (parse_opt): Adjust fallthrough comment.
	* elflint.c (parse_opt): Add missing break after 'd' case.
	(check_sections): Add fallthrough comments.
	* objdump.c (parse_opt): Add explantion for fallthrough comment.

2016-10-22  Kevin Cernekee  <cernekee@chromium.org>

	* unstrip.c: Fix "invalid string offset" error caused by using the
	  unstripped .symtab with the stripped .strtab.

2016-10-11  Akihiko Odaki  <akihiko.odaki.4i@stu.hosei.ac.jp>

	* arlib.c: Remove system.h include, add libeu.h include.
	* arlib2.c: Remove sys/param.h include.
	* elfcompress.c: Add libeu.h include.
	* elflint.c: Remove sys/param.h include, add libeu.h include.
	* nm.c: Likewise.
	* objdump.c: Likewise.
	* ranlib.c: Likewise.
	* readelf.c: Likewise.
	* size.c: Remove sys/param.h include.
	* strings.c: Likewise, add libeu.h include.
	* strip.c: Likewise.
	* unstrip.c: Likewise.

2016-10-06  Mark Wielaard  <mjw@redhat.com>

	* strip.c (handle_elf): Don't remove real symbols from allocated
	symbol tables.

2016-08-25  Mark Wielaard  <mjw@redhat.com>

	* strip.c (handle_elf): Recompress with ELF_CHF_FORCE.

2016-08-06  Mark Wielaard  <mjw@redhat.com>

	* strip.c (handle_elf): Uncompress and recompress relocation target
	section if necessary.

2016-07-08  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (strip_LDADD): Add libdw.
	* elfcompress.c (process_file): Use dwelf_strtab functions instead of
	ebl_strtab.
	* strip.c (handle_elf): Likewise.
	* unstrip.c (new_shstrtab): Likewise.

2016-07-06  Mark Wielaard  <mjw@redhat.com>

	* elf32-i386.script, i386_ld.c, ld.c, ld.h, ldgeneric.c, ldlex.l,
	ldscript.y, libld_elf_i386.map, none_ld.c, sectionhash.c,
	sectionhash.h, symbolhash.c, symbolhash.h, unaligned.h,
	versionhash.c, versionhash.h, xelf.h: Removed.
	* Makefile.am (YACC): Removed.
	(AM_YFLAGS): Removed.
	(AM_LFLAGS): Removed.
	(native_ld): Removed.